# drug_panel_auto

./: .gitignore  CLAUDE.md  Dockerfile  Makefile  deploy.sh  docker-compose.yml  reportgen_setup.py  requirements.txt  vercel.json
api/: index.py
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: auth.py  batch.py  clinical_info.py  config.py  excel.py  knowledge.py  report.py  router.py  task.py
backend/app/models/: __init__.py  audit.py  task.py  upload.py  user.py
backend/app/schemas/: auth.py  clinical_info.py  common.py  excel.py  report.py
backend/app/services/: clinical_info_service.py  config_service.py  file_manager.py  knowledge_service.py  reportgen_bridge.py  task_manager.py
backend/app/ws/: progress.py
config/: cnv_fusion_hla_mapping.yaml  drug_tables_config.yaml  filtering.yaml  mapping.yaml  mapping.yaml.bak  patient_info.yaml  project_types.yaml  settings.yaml  variant_table_baseline.yaml
config/panels/: crc_358.yaml
frontend/: components.d.ts  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: main.ts
reportgen/: __init__.py  __version__.py  cli.py
reportgen/config/: __init__.py  loader.py  validators.py
reportgen/core/: __init__.py  _field_mapper_immune.py  _field_mapper_targeted_drugs.py  batch_highlight.py  batch_runner.py  customer_doc.py  data_cleaner.py  enhancer_registry.py  excel_reader.py  field_mapper.py  (+5 more)
(+44 files in other folders)
